--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/colorsito"
     tools:context=".MainActivity">
 
     <TextView
@@ -15,5 +16,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/giros"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="giros"
+        app:layout_constraintTop_toBottomOf="@+id/cuentapasos"
+        app:layout_constraintRight_toRightOf="@id/cuentapasos"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
